# agent-injection-suite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
benchmark/: README.md  run.sh
benchmark/results/: mistral_latest.json  qwen2.5_14b.json  qwen2.5_7b.json
docs/: WRITEUP.md  adding-an-adapter.md
injection_suite/: __init__.py  __main__.py  cli.py  detectors.py  report.py  runner.py  schema.py  tools.py
injection_suite/adapters/: __init__.py  base.py  mock_offline.py  reference_llm.py
scenarios/: dangerous_tool.yaml  direct_override.yaml  indirect_injection.yaml  scope_escalation.yaml  secret_exfil.yaml  system_prompt_leak.yaml
tests/: conftest.py  test_cli.py  test_detectors.py  test_mock_offline.py  test_reference_llm.py  test_report.py  test_runner.py  test_scenarios.py  test_schema.py
